--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">Nurul Kholifah</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Mahasiswa, STMIK, Dharmawacana, Metro"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Alumni, STMIK, Dharmawacana, Metro"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -106,7 +106,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Nurul Kholifah</span></p>
-                        <p><span class="title-s">Npm: </span> <span>19020021</span></p>
+                        <p><span class="title-s">Tempat, tanggal lahir: </span> <span>Siswo Bangun, 09 September 2000</span></p>
                         <p><span class="title-s">Email: </span> <span>nuruolif0909@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>083178721377</span></p>
                       </div>
@@ -140,8 +140,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Saya adalah mahasiswa dari STMIK Dharmawacana metro tahun angkatan 2019 saya bertempat tinggal di seputih banyak.
-                      saya dari alumni SMA Negeri 01 Seputih Banyak dari jurusan ipa.
+                      Saya adalah mahasiswa lulusan dari STMIK Dharmawacana metro tahun 2023 jurusan Sistem Informasi dengan ipk 3.30. Memiliki semangat dan pribadi yang bekerja keras, mudah berbaur, serta akan memberikan yang terbaik pada pekerjaan saya.
                     </p>
                   </div>
                 </div>
