--- a/index.html
+++ b/index.html
@@ -114,21 +114,21 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <span>MICROSOFT</span> <span class="pull-right">85%</span>
+                    <span>CANVA</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>MICROSOFT EXCEL</span> <span class="pull-right">75%</span>
+                    <span>MICROSOFT EXCEL</span> <span class="pull-right">85%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="855" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>SKETCHUP</span> <span class="pull-right">50%</span>
+                    <span>SKETCHUP</span> <span class="pull-right">80%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>BAHASA INGGRIS</span> <span class="pull-right">50%</span>
+                    <span>COREL DRAW</span> <span class="pull-right">95%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
